# In-Tuned

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  emoindex.html  entrypoint.sh  main.py  pyproject.toml  requirements.txt  server.py  start.sh  test_server.py  wsgi.py
.github/workflows/: ci.yml
app/: __init__.py  cli.py  config.py  extensions.py  logging_config.py
app/blueprints/: __init__.py  admin.py  analytics.py  auth.py  detector.py  entries.py  feedback.py  lexicon.py  site.py  users.py
app/db/: __init__.py  connection.py  transaction.py
app/db/repositories/: __init__.py  audit_repository.py  base.py  feedback_repository.py  journal_repository.py  lexicon_repository.py  site_repository.py  user_repository.py
app/services/: __init__.py  detector_service.py  lexicon_service.py
app/utils/: __init__.py  errors.py  responses.py  security.py  validation.py
client/: admin.html  admin.js  index.html  main.js  manifest.json  styles.css
client/css/: analytics.css  components.css
client/js/: analytics.js  api.js  export-import.js  ui.js  validation.js
detector/: __init__.py  detector.py  enhanced_init.py  external_lexicon.py  formatter.py  lexicon_loader.py
detector/lexicons/: __init__.py  english.py  portuguese.py  safety.py  spanish.py
docs/: ARCHITECTURE.md
emotion_app/: __init__.py  detector.py  formatter.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_user_lockout_columns.py
tests/: __init__.py  conftest.py  test_auth.py  test_detector.py  test_feedback.py  test_journals.py  test_site.py
